# dithering

./: .gitignore  Cargo.toml  README.md  nice_kernels.md  test_cache  test_cache.rs  test_seed_cache  test_seed_cache.rs
src/: filters.rs  kernel_cache.rs  kernel_expander.rs  kernel_optimizer.rs  lib.rs  main.rs  posterize.rs
