[package]
name = "image_filters"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = ["png", "bmp", "tiff", "webp", "gif"] }
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.0.3", features = ["serde"] }
